# ft_printf

./: CMakeLists.txt  Makefile  a.out  apply_flags.c  chck_b.c  chck_di.c  chck_f.c  chck_o.c  chck_sr.c  chck_x.c  e_zrs.c  fld_edge.c  fr_p.c  ft_c.c  ft_d.c  ft_e.c  ft_f.c  ft_fld.c  ft_g.c  ft_itoa_base.c  ft_itoa_fp.c  ft_ox.c  ft_p.c  ft_printf.c  ft_printf.h  ft_put_percent.c  int_p.c  main.c  mantis.c  output.c  reader.c  res_o_fr.c  res_w_fr.c  rnd_z.c  rndg_z.c  str_ml.c  t_str.c  test.c  wzrs.c
includes/: ft_printf.h
libft/: .Makefile.swp  Makefile  ft_atoi.c  ft_bin.c  ft_bzero.c  ft_calc.c  ft_df.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnum.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+26 more)
srcs/: add_z.c  apply_flags.c  c_str.c  chck_b.c  chck_c.c  chck_di.c  chck_e.c  chck_g.c  chck_o.c  chck_sr.c  chck_u.c  chck_x.c  chck_xu.c  e_zrs.c  fld_edge.c  fr_p.c  ft_c.c  ft_e.c  ft_fld.c  ft_free_output.c  ft_g.c  ft_itoa_base.c  ft_itoa_fp.c  ft_ox.c  ft_p.c  ft_printf.c  ft_put_percent.c  ft_rg.c  ft_round.c  ft_s.c  ft_u.c  int_p.c  main.c  mexp.c  pw.c  pw_to_str.c  reader.c  res_o_fr.c  res_w_fr.c  rnd.c  (+8 more)
