cmake_minimum_required(VERSION 3.14)
project(ft_printf C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft/includes)

add_executable(ft_printf
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/sources/ft_abs.c
        libft/sources/ft_atoi.c
        libft/sources/ft_bzero.c
        libft/sources/ft_factorial.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_isprint.c
        libft/sources/ft_itoa.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_sqrt.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strrev.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources/get_next_line.c
        add_z.c
        apply_flags.c
        c_str.c
        e_zrs.c
        fld_edge.c
        fr_p.c
        ft_c.c
        ft_d.c
        ft_e.c
        ft_f.c
        ft_fld.c
        ft_g.c
        ft_itoa_base.c
        ft_itoa_fp.c
        ft_ox.c
        ft_p.c
        ft_printf.c
        ft_printf.h
        ft_rg.c
        ft_round.c
        int_p.c
        main.c
        mantis.c
        mexp.c
        pw.c
        pw_to_str.c
        reader.c
        res_o_fr.c
        res_w_fr.c
        rnd.c
        rnd_z.c
        rndg.c
        rndg_z.c
        s_str.c
        str_ad.c
        str_ml.c
        t_str.c
        wzrs.c
        zrs.c)
