cmake_minimum_required(VERSION 3.14)
project(ft_printf C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(ft_printf
        includes/ft_printf.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/sources/ft_abs.c
        libft/sources/ft_atoi.c
        libft/sources/ft_bzero.c
        libft/sources/ft_factorial.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_isprint.c
        libft/sources/ft_itoa.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_sqrt.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strrev.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources/get_next_line.c
        srcs/add_z.c
        srcs/apply_flags.c
        srcs/c_str.c
        srcs/e_zrs.c
        srcs/fld_edge.c
        srcs/fr_p.c
        srcs/ft_c.c
        srcs/ft_d.c
        srcs/ft_e.c
        srcs/ft_f.c
        srcs/ft_fld.c
        srcs/ft_g.c
        srcs/ft_itoa_base.c
        srcs/ft_itoa_fp.c
        srcs/ft_ox.c
        srcs/ft_p.c
        srcs/ft_printf.c
        srcs/ft_rg.c
        srcs/ft_round.c
        srcs/int_p.c
        srcs/mantis.c
        srcs/mexp.c
        srcs/pw.c
        srcs/pw_to_str.c
        srcs/reader.c
        srcs/res_o_fr.c
        srcs/res_w_fr.c
        srcs/rnd.c
        srcs/rnd_z.c
        srcs/rndg.c
        srcs/rndg_z.c
        srcs/s_str.c
        srcs/str_ad.c
        srcs/str_ml.c
        srcs/t_str.c
        srcs/wzrs.c
        srcs/zrs.c
        main.c)
